version/0.7/_sources/User_guide/index.rst.txt
.. _ref_user_guide:

==========
User guide
==========

This section provides brief tutorials for helping you understand how to effectively use PyAEDT.

For additional practical demonstrations, see
`PyAEDT examples <https://aedt.docs.pyansys.com/version/stable/examples>`_ page.


.. grid:: 2

   .. grid-item-card:: Basic tutorial
            :link: intro
            :link-type: doc
            :margin: 2 2 0 0
            
            How to launch AEDT and create a project.

   .. grid-item-card:: Modeler
            :link: modeler
            :link-type: doc
            :margin: 2 2 0 0

            How to use 2D and 3D Modeler.

   .. grid-item-card:: Mesh
            :link: mesh
            :link-type: doc
            :margin: 2 2 0 0

            How PyAEDT handles mesh operations.

   .. grid-item-card:: Setup
            :link: setup
            :link-type: doc
            :margin: 2 2 0 0

            How to create a setup and run simulations.

   .. grid-item-card:: Variables and Optimetrics
            :link: variables
            :link-type: doc
            :margin: 2 2 0 0

            How to generate parametric models and run optimizations.

   .. grid-item-card:: Load and manage files
            :link: files
            :link-type: doc
            :margin: 2 2 0 0

            How to load and manage input and output files.

   .. grid-item-card:: Postprocessing
            :link: postprocessing
            :link-type: doc
            :margin: 2 2 0 0

            How to generate reports, images, and PDF files.

.. toctree::
   :hidden:
   :maxdepth: 2

   intro
   modeler
   mesh
   setup
   variables
   files
   postprocessing
